<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.singingbush</groupId>
    <artifactId>sdlang</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <name>SDLang</name>
    <description>Support for SDLang (Simple Declarative Language)</description>
    <url>https://github.com/SingingBush/SDL</url>
    <inceptionYear>2011</inceptionYear>

    <licenses>
        <license>
            <name>GNU Lesser General Public License, Version 2.1</name>
            <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Leuck</name>
            <email>support@ikayzo.com</email>
            <organization>ikayzo</organization>
            <organizationUrl>http://ikayzo.com</organizationUrl>
            <roles>
                <role>original author</role>
            </roles>
        </developer>
        <developer>
            <name>Samael Bate</name>
            <email>samael@singingbush.com</email>
            <organization>SingingBush</organization>
            <organizationUrl>http://singingbush.com</organizationUrl>
            <roles>
                <role>maintainer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/SingingBush/SDL.git</connection>
        <developerConnection>scm:git:ssh://github.com:SingingBush/SDL.git</developerConnection>
        <url>https://github.com/SingingBush/SDL/tree/master</url>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/SingingBush/SDL/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <!--<configuration>-->
                    <!--<repoToken> HANDLED BY TRAVIS ENVIRONMENT VARIABLE </repoToken>-->
                <!--</configuration>-->
            </plugin>
        </plugins>
    </build>

</project>
